# MinZdravTestTask

./: README.md  docker-compose.yml  pyproject.toml
friends_service/: config.py  main.py  requirements.txt
friends_service/api/: dependencies.py
friends_service/api/routers/: __init__.py  friends.py
friends_service/api/schemas/: friends.py
friends_service/core/entities/: friend_relation.py
friends_service/core/repositories/: friend_relations.py
friends_service/core/services/: friends_relation.py
friends_service/database/: base.py
friends_service/database/migrations/: env.py
friends_service/database/migrations/versions/: 45bc3ee7407b_add_friend_relation.py
friends_service/database/models/: __init__.py  friend_relation.py
friends_service/utils/: users_api.py
users_service/: config.py  main.py  requirements.txt
users_service/api/: dependencies.py
users_service/api/routers/: __init__.py  users.py
users_service/api/schemas/: users.py
users_service/core/entities/: user.py
users_service/core/repositories/: base.py  users.py
users_service/core/services/: users.py
users_service/database/: base.py
users_service/database/migrations/versions/: c723d1428a86_add_user.py
users_service/database/models/: user.py
users_service/utils/: logger.py  logger_middleware.py
